# todo_txt

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
src/todo_txt/: __init__.py  repository.py  view.py
src/todo_txt/cli/: handle_add.py  handle_archive.py  handle_do.py  handle_edit.py  handle_list.py  handle_note.py  handle_stats.py  main.py
src/todo_txt/model/: filters.py  task.py  todo_list.py
src/todo_txt/parser/: filter_parser.py
tests/integration/: test_example.py  test_search_flow.py
tests/integration/cli/: test_handle_add.py  test_handle_archive.py  test_handle_do.py  test_handle_edit.py  test_handle_list.py
tests/unit/: test_repository.py
tests/unit/model/: test_filters.py  test_task.py  test_todo_list.py
tests/unit/parser/: test_filter_parser.py
