[project]
name = "todo_txt"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kevst-dev", email = "kevst-dev@protonmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "lark>=1.3.1",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest<9.0.0,>=8.3.5",
]

[project.scripts]
dev = "todo_txt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
preview = true
extend-exclude = '''tests/data'''
